--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 # Domínio e Let's Encrypt
-DOMAIN=meusite.orcinus.pt
+DOMAIN=testeorcinus.orcinus.pt
 EMAIL_LETSENCRYPT=suporte@orcinus.pt
 
 # MySQL externo
-DB_HOST=mysql.externo.orcinus.pt
+DB_HOST=10.0.0.70
 DB_PORT=3306
 
 # Nova base/credenciais da aplicação
-DB_NAME=meusite
-DB_USER=db_meusite
+DB_NAME=testeorcinus
+DB_USER=testeorcinus
 DB_PASS=troca_esta_senha
 DB_SSL_MODE=REQUIRED
 
 # Provisionamento (se usares db-provisioner)
 TEMPLATE_DB=template_app
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=troca_esta_senha_root
+MYSQL_ROOT_USER=orcinus
+MYSQL_ROOT_PASSWORD=dR.4zivvPrA9uw9cwPr.4ZrWFzDK-j
